sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: an expression of type Null is ineligible for implicit conversion
  var v:Int = null
              ^AlgInsertionSort:4: error: type mismatch;
 found   : Null(null)
 required: Int
  var v:Int = null
              ^